# rhanis

./: .gitignore  .worktreeinclude  2oji3vkajvmbojkl4uekrjfsohdlv8pi.darc  AGENTS.md  CLAUDE.md  manifest  package.json  pnpm-lock.yaml  wdio.conf.js
.beads/: config.yaml  interactions.jsonl  issues.jsonl
.claude/: loop.md
.github/workflows/: ci.yml  gpt-review.yml
docs/design/: 2026-06-09-immersive-orb-design-brief.md  2026-06-10-glassbox-console-design-brief.md  2026-06-11-calibration-signal-sources.md
docs/design/mockups/: rhanis-mono-3pane.html  rhanis-mono-chic.html  rhanis-mono-dynamic.html  rhanis-tone-1-minimal.html  rhanis-tone-2-warm.html  rhanis-tone-3-tech.html
docs/research/competitor-2026-06-09/: 01-codex-app-teardown.md  02-hermes-desktop-teardown.md  03-design-craft.md  04-feature-settings-taxonomy.md  05-voice-alwayson-ux.md  06-fact-check.json  07-hermes-koe-curation.md  08-fathah-desktop-inventory.md  09-hermes-toolsets-skills.md  10-hermes-memory-appearance.md  11-hermes-factcheck.json  12-consumer-voice-assistants.md  13-pc-operating-agents.md  14-koe-niche-bigplayer-threat.md  15-competitive-factcheck.json  16-competitive-strategy-synthesis.md
docs/reviews/: 2026-06-04-comprehensive-review.md  2026-06-09-competitor-design-research.md  2026-06-09-ux-rootcause-review.md  2026-06-10-competitive-landscape.md  2026-06-10-exhaustive-review.md  2026-06-10-session-decisions.md  2026-06-13-product-name-rhanis.md  2026-06-13-rhanis-migration-plan.md
e2e/: smoke.e2e.js
src/: App.css  App.test.tsx  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: approval_gate.rs  audio_bridge.rs  cost_tracker.rs  display_descriptor.rs  events.rs  lib.rs  main.rs  permission_policy.rs  realtime_provider.rs  realtime_types.rs  secret_store.rs  session_manager.rs  settings_store.rs  tool_dispatcher.rs  validation.rs
src-tauri/src/storage/: adapter.rs  mod.rs  sqlite.rs
src-tauri/src/tools/: mod.rs  notes.rs  read_file.rs  take_screenshot.rs  web_search.rs
src/features/activity/: ActivityLog.css  ActivityLog.test.tsx  ActivityLog.tsx  ApprovalModal.css  ApprovalModal.test.tsx  ApprovalModal.tsx  CostHeader.css  CostHeader.test.tsx  CostHeader.tsx  DevMockEmitter.css  DevMockEmitter.test.tsx  DevMockEmitter.tsx  activityStore.test.ts  activityStore.ts  costStore.test.ts  costStore.ts  types.ts  useActivityEvents.test.ts  useActivityEvents.ts  useCostEvents.test.ts  useCostEvents.ts
src/features/console/: ConsoleLayout.css  ConsoleLayout.test.tsx  ConsoleLayout.tsx
src/features/session/: VoiceButton.css  VoiceButton.test.tsx  VoiceButton.tsx  sessionStore.test.ts  sessionStore.ts  useSessionEvents.test.ts  useSessionEvents.ts
src/features/settings/: AdapterSelector.tsx  ApiKeyInput.test.tsx  ApiKeyInput.tsx  BudgetOnboarding.tsx  OnboardingGate.test.tsx  OnboardingGate.tsx  PermissionPolicyEditor.test.tsx  PermissionPolicyEditor.tsx  SettingsPanel.test.tsx  SettingsPanel.tsx  VoiceProviderSelector.test.tsx  VoiceProviderSelector.tsx  onboarding-styling.test.tsx  onboarding.css  settings.css  settingsStore.test.ts  settingsStore.ts  types.ts
src/lib/tauri/: ipc.test.ts  ipc.ts
