[package]
name = "koe"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "koe_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Secret store (BYOK). The stronghold *plugin* is NOT registered; we use the
# `Stronghold` wrapper type directly from Rust so the WebView gets no JS surface.
tauri-plugin-stronghold = "2"
iota_stronghold = "2"
zeroize = "1"
getrandom = "0.2"
# Recorder storage (koe-nnk). rusqlite owns the SQLite DB entirely in Rust;
# `bundled` compiles SQLite in (no system lib dependency -> reproducible Windows
# builds). tauri-plugin-sql is intentionally NOT used: it would expose a SQL
# surface to the WebView, the same risk the disabled stronghold plugin avoids.
rusqlite = { version = "0.37", features = ["bundled"] }
# Approval gate (koe-1vi): a per-request `oneshot` channel carries the human
# decision back to the awaiting tool task, and `time::timeout` enforces the 30s
# fail-closed deadline. Tauri already pulls tokio in transitively, but the
# approval gate depends on these APIs directly, so it is declared explicitly
# (`rt`/`macros` are needed for the `#[tokio::test]` timeout tests).
tokio = { version = "1", features = ["sync", "time", "rt", "macros", "net"] }
# WebSocket client for the OpenAI Realtime session (koe-e3m). rustls (pure Rust,
# no system TLS lib) so `cargo test` links on WSL/Linux — native-tls fails to
# link there.
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
# SinkExt (.send()) + StreamExt (.next()) for the WS sink/stream. `async-await`
# is declared explicitly so StreamExt does not depend on a transitive feature.
futures-util = { version = "0.3", default-features = false, features = ["sink", "async-await"] }

# OS keychain for the 32-byte Stronghold snapshot key. Platform-split so the
# crate compiles both on the Windows target and in the WSL/Linux dev box used
# for `cargo test` (pure-Rust secret-service backend, no system libs needed).
[target.'cfg(windows)'.dependencies]
keyring = { version = "3", features = ["windows-native"] }

[target.'cfg(not(windows))'.dependencies]
keyring = { version = "3", features = ["sync-secret-service", "crypto-rust"] }

# Audio bridge (koe-flu): cpal for mic capture, rodio for playback.
# cpal: cross-platform audio I/O — Windows WASAPI / macOS CoreAudio / Linux ALSA.
# rodio: high-level playback on top of cpal; handles PCM sink + format negotation.
# Resampling: handled by the hand-rolled resample_mono_linear() in audio_bridge.rs
# (linear interpolation, voice-adequate for the cpal device-rate ratios in use).
#
# WSL/Linux build note: cpal links against libasound (ALSA). `libasound2-dev`
# is needed at compile time. If not installed system-wide, extract the .deb
# manually and set:
#   PKG_CONFIG_PATH=<path-to-extracted-alsa>/pkgconfig
#   RUSTFLAGS="-L<path-to-extracted-alsa>/lib"
# The pure-logic unit tests (no hardware) pass on WSL with this workaround.
# Real mic / playback E2E requires native Windows (see koe-ef8).
cpal = "0.15"
rodio = { version = "0.20", default-features = false, features = ["symphonia-wav"] }
# rubato removed: the hand-rolled resample_mono_linear() in audio_bridge.rs
# is voice-adequate for the cpal device-rate ratios (44100→24000, 48000→24000,
# 16000→24000). Re-add rubato if higher-quality resampling is required later.
# base64 for encoding PCM16 chunks into the OpenAI input_audio_buffer.append frame
base64 = "0.22"

[dev-dependencies]
tempfile = "3"

